--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,5 @@ script:
 # Make sure it is still possible to use apt
 - >
   docker run wtanaka/ubuntu-1604-oracle-java-8 sh -c "apt-get update && apt-get install less"
+after_success:
+- curl https://registry.hub.docker.com/u/wtanaka/ubuntu-1604-oracle-java-8/trigger/d2563ab7-e4fc-455a-bfcf-3f40ee0b883e/
